# llm-playground

./: events.md  ka_cards.md  pyproject.toml  result.txt  understand_context.md
data/: .gitignore  README.md
llm_playground/: __main__.py  app.py  chat_app.py  models.py  settings.py  utils.py
llm_playground/prompts/: extract_ka_cards.py  persona.py  tiktoken.py
llm_playground/prompts/create_ka_cards/: extract_events.py
llm_playground/prompts/understand_context/: double_check.py  understand.py
llm_playground/resilience/: Home.py
llm_playground/resilience/pages/: Diary.py
